# mc-config

./: .gitignore  .sops.yaml  README.md  config.json  flake.nix
.github/workflows/: check-and-release.yml  check.yml  update.yml
flake-modules/: default.nix  mc-config.nix
modules/: default.nix  launchers.nix  mc-config.nix  module-list.nix  name.nix  update.nix
modules/_common/: file.nix
modules/minecraft/: build.nix  files.nix  items.nix  launch-script.nix  mods.nix
modules/minecraft/game/: allowed-symlinks.nix  version.nix
modules/minecraft/server/: eula.nix
modules/misc/: lock.nix  name.nix  update.nix
pkgs/: client-launcher.nix  client.nix  default.nix  fabric-libraries.nix  minecraft-server.nix  mods-combined.nix  mods-zip.nix  mods.nix  server-launcher.nix  server.nix
update/: default.nix  pyproject.toml  secrets.yaml  update.py
