[tool.poetry]
name = "update"
version = "0.0.0"
description = ""
authors = ["Lin Yinfeng <lin.yinfeng@outlook.com>"]

[tool.poetry.scripts]
update = "update:cli"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
iso8601 = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
